--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.7.12",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^1.0.6",
     "@nhost/react": "^2.0.15",
+    "@nhost/react-apollo": "^5.0.18",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
